syntax = "proto3";
package celestia.qgb.v2;

import "gogoproto/gogo.proto";
import "celestia/qgb/v2/types.proto";

option go_package = "github.com/celestiaorg/celestia-app/x/blobstream/types";

// Params represent Blobstream genesis and store parameters.
message Params {
  option (gogoproto.stringer) = false;

  uint64 data_commitment_window = 1;
}

// GenesisState struct, containing all persistent data required by Blobstream
// module
message GenesisState { Params params = 1; }
